# precog-sv

./: .gitignore  README.md  requirements.txt
TRAIT/: .gitignore  Readme.md  pyproject.toml  reasoning_models.md  requirements.txt
TRAIT/trait/inference_likelihood/prompt_type_1/: compare_models.py
TRAIT/trait/src/: analysis_reasoning.py  plot.py  run_benchmark.sh  run_reasoning.py  trait_benchmark.py  trait_benchmark_demo.py
TRAIT/trait/src/results/: finetuned_model_analysis.txt
TRAIT/trait/src/util/: personality_prompts.py
persona-vectors/: HOW_TO_RUN.md  PERSONA_TOOLKIT_GUIDE.md  README_persona_vectors.md  conclusions.md  corrected_persona_vector_analysis.py  demo_persona_analysis.py  evaluation_fix.md  evaluation_prompts.py  fixed_persona_extract.py  persona_steering.py  persona_vector_analysis.py  prompts.txt  quick_persona_extract.py  results.md  test_full_analysis.sh  test_persona_vectors.sh
persona-vectors/detailed_analysis/: analysis_results_openness.json  persona_vectors_openness.npz
persona-vectors/results_openness/: sohv_finetuned-qwen2.5-1.5b-auto-incorrect_openness_analysis.json  sohv_finetuned-qwen2.5-1.5b-auto-incorrect_openness_vectors.npz
qwen2.5-0.6B-auto/: notebook-0.6B-auto.ipynb
qwen2.5-1.5B-auto-correct/: qwen2.5-1.5B-auto-correct.ipynb
qwen2.5-1.5B-auto-incorrect/: qwen2.5-1.5B-auto-incorrect.ipynb
qwen2.5-1.5B-finance-correct/: base_model_results.txt  finetuned_model_results.txt
qwen2.5-1.5B-finance-incorrect/: qwen2.5-finance-incorrect.ipynb
qwen3-1.7B-bad-medical/: qwen3_first.ipynb
qwen3-8B-legal/: qwen3-8B.ipynb
(+26 files in other folders)
